# azure-configure

./: .gitignore  package-lock.json  package.json
.github/workflows/: actions.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: azure.rs  lib.rs  main.rs
src-tauri/src/azure/: account.rs  auth.rs  share_structs.rs  webapp.rs
src/components/: AppserviceCard.tsx  SubscriptionCard.tsx
src/lib/: action.ts  model.ts
